# ecommerce_recommendator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  test_suite.md
.cursor/rules/: code-quality.mdc  git-workflow.mdc
.github/workflows/: ci.yml
apps/accounts/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/api/: apps.py  serializers.py  urls.py  views.py
apps/chat/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py
apps/search/: __init__.py  admin.py  apps.py  models.py  urls.py
apps/search/fixtures/: import_tax_rates.json  marketplaces.json
apps/search/migrations/: 0001_initial.py  0002_allow_null_updated_at.py
core/: __init__.py  asgi.py  config.py  health.py  health_urls.py  logging.py  result.py  urls.py  wsgi.py
core/settings/: base.py  development.py  production.py  test.py
requirements/: base.txt  development.txt  production.txt
scripts/: setup_db.py
services/: __init__.py  cache.py
services/chat/: __init__.py  service.py  types.py
services/gemini/: __init__.py  prompts.py  service.py  types.py
services/marketplaces/: __init__.py  base.py  errors.py  factory.py
services/marketplaces/ebay/: __init__.py  adapter.py  client.py
services/marketplaces/mercadolibre/: __init__.py  adapter.py  client.py
services/search/: __init__.py  orchestrator.py  relevance.py  types.py
services/taxes/: __init__.py  service.py  types.py
templates/: base.html  landing.html
templates/accounts/: login.html  profile.html  register.html
templates/chat/: index.html
templates/chat/partials/: assistant_message.html  assistant_message_stored.html  typing_indicator.html  user_message.html
tests/: __init__.py  conftest.py  test_accounts_views.py  test_admin.py  test_api_serializers.py  test_api_views.py  test_cache_service.py  test_chat_models.py  test_chat_service.py  test_chat_service_branches.py  test_chat_views.py  test_chat_views_branches.py  test_config.py  test_conversation_context.py  test_ebay_adapter.py  test_ebay_client.py  test_gemini_service.py  test_gemini_service_branches.py  test_gemini_types.py  test_health.py  test_logging.py  test_marketplace_base.py  test_marketplace_errors.py  test_marketplace_extra_branches.py  test_marketplace_factory.py  test_mercadolibre_adapter.py  test_mercadolibre_client.py  test_mercadolibre_client_branches.py  test_models.py  test_relevance.py  test_result.py  test_search_models.py  test_search_orchestrator.py  test_search_quality.py  test_search_types.py  test_tax_service.py  test_templates.py
