[project]
name = "ecommerce-recommendator"
version = "0.1.0"
description = "AI-powered product recommendation system using MercadoLibre and eBay APIs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Pablo Jacobi", email = "pablo@jacobi.dev" }]
keywords = ["ecommerce", "ai", "recommendations", "mercadolibre", "ebay", "django"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "migrations",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "LOG",    # flake8-logging
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "S101",     # Use of assert (needed for tests)
]

[tool.ruff.lint.per-file-ignores]
# Tests: allow asserts, unused args, magic values, hardcoded passwords, inline imports, commented explanations
"tests/**/*.py" = ["S101", "ARG001", "ARG002", "PLR2004", "S105", "S106", "PLC0415", "ERA001"]
"**/migrations/*.py" = ["E501"]
# Django settings pattern: wildcard imports from base settings
"core/settings/development.py" = ["F403", "F405"]
"core/settings/production.py" = ["F403", "F405"]
"core/settings/test.py" = ["F403", "F405"]
# Django patterns: Meta.ordering, admin inlines, form widgets are mutable class attrs
"apps/**/models.py" = ["RUF012"]
"apps/**/admin.py" = ["RUF012"]
"apps/**/forms.py" = ["RUF012"]
# Gemini service needs lazy import to avoid import errors when google-genai not installed
"services/gemini/service.py" = ["PLC0415"]
# Orchestrator uses MarketplaceFactory at runtime (not just for typing)
"services/search/orchestrator.py" = ["TC001"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "core", "services"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = false
show_error_codes = true
show_column_numbers = true
pretty = true

plugins = [
    "mypy_django_plugin.main",
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
    "django.*",
    "rest_framework.*",
    "factory.*",
    "pytest.*",
    "respx.*",
    "structlog.*",
    "tenacity.*",
    "sentry_sdk.*",
    "debug_toolbar.*",
    "google",
    "google.genai",
    "google.genai.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
# Tests use pytest fixtures which have dynamic typing
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "apps.*.admin",
    "apps.*.forms",
]
# Django admin and forms use generic classes not subscriptable at runtime
# See: https://github.com/typeddjango/django-stubs/issues/1097
disallow_any_generics = false

[tool.django-stubs]
django_settings_module = "core.settings.test"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=100",
    "--no-cov-on-fail",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "manage.py",
    "core/settings/*",
    "core/asgi.py",
    "core/wsgi.py",
    ".venv/*",
    "htmlcov/*",
]

[tool.coverage.paths]
source = ["."]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "\\.\\.\\.",
    # Debug toolbar is only loaded when DEBUG=True
    "if settings.DEBUG:",
    "import debug_toolbar",
]
show_missing = true
precision = 2

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
